refactor: 将应用名称从 "picGO" 更改为 "PicGoHome"
更新了 package.json、index.html 和 Layout.vue 中的名称引用，以统一应用名称为 "PicGoHome"。同时，在 PicBack.vue 中添加了备份步骤说明，并优化了备份逻辑，确保用户选择目录后执行文件复制操作。

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "icon": "path/to/your/icon.png"
     }
   },
-  "name": "picGO",
+  "name": "PicGoHome",
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
