feat: 添加electron打包配置并优化主进程设置
- 解决打包后app文件打开白屏问题，无法加载vue文件，将dist打包到app中
- 新增electron-builder.json配置文件，定义打包文件和mac图标
- 修改vite配置，设置base路径为相对路径
- 更新package.json中的dist命令，整合vite构建和electron打包
- 重命名项目为PicGoHome
- 修改主进程代码，支持全屏模式并加载本地构建文件

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "preview": "vite preview",
     "electron:dev": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "vite build && electron-builder build --config electron-builder.json"
   },
   "dependencies": {
     "element-plus": "^2.9.10",
